manifests-ab3/carts-graviton-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - arm64
              - key: NodeGroupType
                operator: In
                values:
                - Graviton
