manifests-ab3/graviton-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important  # The name will be ignored if patching by strategic merge
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - arm64
              - key: NodeGroupType
                operator: In
                values:
                - Graviton
