manifests-ab3/orders-postgresql-graviton-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: orders-postgresql
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - arm64
              - key: NodeGroupType
                operator: In
                values:
                - Graviton
